minor heading spacing fix

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -49,7 +49,7 @@
 
     .section-1 {
       height: 175vh;
-      padding: 2rem 0 5px;
+      padding: 5rem 0 5px;
     }
 
     .section-2 {
